========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2015-09-06

  - Made some breaking changes to the API. These changes are necessary in order
    to implement fuzzy matching of lots (the new "FULL" inventory booking
    method). They also simplify and make the data structures under a Position
    much more sensible. Details:

    * The 'position.Lot.lot_date' field has been moved to 'position.Cost.date'
      (complete) and 'position.CostSpec.date' (incomplete). A Lot now consists
      only in a currency and a 'cost' attribute.

    * The 'position.Lot.cost' field is not of type Amount anymore; rather, it is
      either of type 'position.Cost' for complete entries, or
      'position.CostSpec' for incomplete entries.


2015-09-06

  - Filter out platform-specific comments from the code generated by GNU Bison,
    in order to avoid unnecessary diffs when I switch between Linux and Mac OS X.


2015-09-05

  - Changed the semantics of the account_rounding account, so that it matches
    that of the other account options, that is, they all specify a sub-account
    of the Equity account. So if you had

      option "account_rounding" "Equity:RoundingError"

    in your input file, change this to:

      option "account_rounding" "RoundingError"

    To ease the transition, the parser now checks if the first component is one
    of the five categories and if so, issues a warning and removes the prefix.

    (One side-effect of this change is that the rounding error account may only
    be an Equity account, but I'm hoping this won't be a problem for anyone.)


2015-08-31

  - The column "weight" was broken; fixed by yagebu@.


2015-08-30

  - Fixed a very minor bug in split_expenses plugin whereby the generated
    postings did not contain the __automatic__ metadata field, and in some
    particular situations, their automatically calculated values would end up